--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -72,8 +72,13 @@
 
 @media screen and (min-width: 900px) {
     .nav__container {
+        position: fixed;
+        background-color: white;
+        top: 3rem;
+        left: 5rem;
         width: 100%;
         box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.05);
         border-radius: 6px;
+        z-index: 10;
     }
 }
