--- a/src/components/Header/Hero.css
+++ b/src/components/Header/Hero.css
@@ -7,7 +7,6 @@
 
 
 .text-flex-column{
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -121,6 +120,7 @@
 }
 
 @media screen and (min-width: 600px) {
+
     .hero__text-container{
         display: flex;
         flex-direction: row;
@@ -128,21 +128,23 @@
 
     .hero__card-container{
         flex-direction: row;
-        align-items: flex-start;
+        justify-content: center;
     }
 
     .card-flex{
+        width: 50%;
         gap:1rem;
     }
 
     .cardFull{
-        width: 70%;
+        width: 60%;
         margin-top: -2rem;
         margin-left: -1rem;
     }
 
     
     .text-flex-column{
+        margin-top: 3rem;
         width: 50%;
         display: flex;
         flex-direction: column;
@@ -150,5 +152,17 @@
     }
     .hero__img-container{
         width: 50%;
+        margin-top: -7rem;
+    }
+
+    .shape>img {
+        position: absolute;
+        width: 80%;
+        height: 190%;
+        top: 7rem;
+        left: 3rem;
+    }
+    .hero__card-container{
+        margin-top: 18vh;
     }
 }
