--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+body{
+    max-width: 1441px;
+}
 
-
-@media screen and (min-width: 900px){
+@media screen and (min-width: 1170px) {
     body{
-        margin: 5rem;
+        margin: auto;
+        padding: 0 10rem;
     }
 }
