--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .nav__container {
     display: flex;
     justify-content: space-between;
-    width: 95%;
+    max-width: 73rem;
     padding: 1rem;
 }
 
@@ -74,11 +74,16 @@
     .nav__container {
         position: fixed;
         background-color: white;
-        top: 3rem;
-        left: 5rem;
+        top: 2rem;
         width: 100%;
         box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.05);
         border-radius: 6px;
         z-index: 10;
+    }
+}
+
+@media screen and (min-width: 1170px) {
+    .nav__container {
+        width: 85%;
     }
 }
