--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -16,6 +16,7 @@
 
 .testimonials__card {
     padding: 0.5rem;
+    max-width: 46rem;
     box-shadow: 0px 27.4797px 68.6992px -9.15989px rgba(0, 0, 0, 0.04);
     border-radius: 8px;
     margin-top: 1.5rem;
@@ -47,5 +48,9 @@
     .testimonials__wrapper {
         margin: 0 auto;
         width: 70%;
+    }
+
+    .testimonials__card{
+        margin: 1.5rem auto;
     }
 }
