--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 body{
-    max-width: 1441px;
+    max-width: 73rem;
 }
 
 @media screen and (min-width: 1170px) {
     body{
-        margin: auto;
-        padding: 0 10rem;
+        margin: 0 auto;
     }
 }
