--- a/src/components/Header/Hero.css
+++ b/src/components/Header/Hero.css
@@ -2,6 +2,7 @@
     margin: 1rem;
     display: flex;
     flex-direction: column;
+
 }
 
 
@@ -96,37 +97,39 @@
 
 .hero__card-container {
     margin-top: 13vh;
-    width: 100%;
+    max-width: 73rem;
     display: flex;
     gap: 1rem;
     flex-direction: column;
     background-color: #258675;
     z-index: 10;
+    padding: 0 1rem;
 }
 
 .card-flex {
-    margin-top: -2rem;
+    transform: translateY(-2rem);
     display: flex;
-    justify-content: space-around;
-    margin-left: 1rem;
-    margin-right: 1rem;
     gap: 0.7rem;
 }
 
-.cardFull {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 2rem;
+.cardFull{
+    flex-grow: 1;
+    transform: translateY(-2rem);
 }
 
 @media screen and (min-width: 600px) {
-
+    
     .hero__text-container {
         display: flex;
         flex-direction: row;
     }
 
+    .text-flex-column{
+        flex-grow: 1;
+    } 
+
     .hero__card-container {
+        margin-top: 18vh;
         flex-direction: row;
     }
 
@@ -134,12 +137,7 @@
         gap: 1rem;
     }
 
-    .cardFull {
-        width: 60%;
-        margin-top: -2rem;
-        margin-left: -1rem;
-    }
-
+ 
 
     .text-flex-column {
         margin-top: 3rem;
@@ -163,6 +161,12 @@
     }
 
     .hero__card-container {
-        margin-top: 18vh;
+     
+    }
+
+    @media screen and (min-width: 1170px) {
+        .hero__container{
+            margin: 0 auto;
+        }
     }
 }
