--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,10 @@
 .nav__container {
+    position: relative;
     display: flex;
     justify-content: space-between;
-    max-width: 73rem;
     padding: 1rem;
-}
-
-.menu {
-    display: none;
+    background-color: white;
+    z-index: 11;
 }
 
 .logo {
@@ -79,11 +77,5 @@
         box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.05);
         border-radius: 6px;
         z-index: 10;
-    }
-}
-
-@media screen and (min-width: 1170px) {
-    .nav__container {
-        width: 85%;
     }
 }
