--- a/src/components/Header/Card/Card.css
+++ b/src/components/Header/Card/Card.css
@@ -1,7 +1,6 @@
 .card__container {
     max-width: 17.3rem;
-    max-height: 17.3rem;
-    padding: 0.7rem;
+    padding: 1rem;
     display: grid;
     gap: 1rem;
     background-color: white;
@@ -14,21 +13,21 @@
 .card__text-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 1rem;
  
 }
 
 .card__text-container>h1 {
     color: #CFCFCF;
     font-weight: 700;
-    font-size: 26px;
+    font-size: clamp(1rem, 2.5vw, 3rem);
     line-height: 36px;
 }
 
 h3 {
     font-weight: 700;
-    font-size: 0.9rem;
-    line-height: 16px;
+    font-size: clamp(0.9rem, 2vw, 1.2rem);
+    line-height: 1rem;
 }
 
 .card__container>img {
@@ -38,14 +37,14 @@ h3 {
 }
 
 .cardFull__container {
-    max-width: 34rem;
-    max-height: 17.3rem;
+    max-width: 35.1rem;
     padding: 1rem;
     display: flex;
     gap: 1rem;
     justify-content: space-between;
     background-color: #FEAEA3;
     border-radius: 4px;
+    margin: 0 auto;
 }
 
 .cardFull__text-container {
@@ -55,7 +54,7 @@ h3 {
 }
 
 .cardFull__text-container>p {
-    font-size: 10px;
+    font-size: clamp(0.8rem, 1vw, 1rem);
     line-height: 20px;
     color: #584F49;
 }
@@ -77,17 +76,7 @@ h3 {
 .text__title-container>h1 {
     color: #FF7D6B;
     font-weight: 700;
-    font-size: 26px;
+    font-size: clamp(1rem, 2.5vw, 3rem);
     line-height: 36px;
 }
 
-.cadFull__img-container {
-    padding-left: 2rem;
-}
-
-@media screen and (min-width: 600px) {
-    .cardFull__container {
-        padding: 1rem;
-        width: 100%;
-    }
-}
