--- a/src/components/Header/Hero.css
+++ b/src/components/Header/Hero.css
@@ -103,6 +103,8 @@
 }
 
 .hero__card-wrapper {
+    max-width: calc(960px - 2rem);
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
 }
@@ -135,6 +137,7 @@
 
     .hero__card-wrapper {
         flex-direction: row;
+        align-items: flex-end;
         gap: 0.7rem;
     }
     .cardFull{
