--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .nav__container {
     position: relative;
+    max-width: 73rem;
     display: flex;
     justify-content: space-between;
     padding: 1rem;
@@ -77,5 +78,11 @@
         box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.05);
         border-radius: 6px;
         z-index: 10;
+    }
+}
+
+@media screen and (min-width: 1170px) {
+    .nav__container {
+        width: 63rem;
     }
 }
