--- a/src/components/Countdown/Countdown.css
+++ b/src/components/Countdown/Countdown.css
@@ -2,6 +2,11 @@
     padding: 3rem 1.1rem;
 }
 
+.countdown-wraper{
+    margin: 5rem auto;
+    max-width: 54rem;
+}
+
 .left-div>h1 {
     font-weight: 700;
     font-size: 1.8rem;
