--- a/src/components/Courses/CourseCard.css
+++ b/src/components/Courses/CourseCard.css
@@ -1,4 +1,6 @@
 .course__container {
+    margin: 0 auto;
+    max-width: 37rem;
     text-align: left;
     padding: 1.1rem;
     box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.07);
