--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -2,10 +2,14 @@
     padding: 5rem 1.5rem;
 }
 .form__wraper{
+    max-width: 54rem;
+    margin: 0 auto;
     padding: 1rem;
     background-image: url('../../assets/Shapes (1).png');
     background-position-y: 5rem;
     background-repeat: no-repeat;
+    max-width: 54rem;
+    margin: 0 auto;
 }
 .form__heading>h1 {
     max-width: 90%;
@@ -75,7 +79,7 @@
 }
 
 .form__form-wraper>button {
-    width: 30%;
+    width: 35%;
     padding: 0.4rem;
     border: none;
     box-shadow: 0px 14.4774px 20.5097px rgba(32, 70, 100, 0.1);
@@ -83,7 +87,7 @@
     background-color: #FF9F66;
     color: white;
     font-weight: 600;
-    font-size: 10px;
+    font-size: 0.625rem;
     line-height: 20px;
 }
 
@@ -99,7 +103,6 @@
         align-items: center;
         background-image: url('../../assets/Shapes (1).png');
         background-position-y: 0;
-        background-position-x: right 5rem;
         background-repeat: no-repeat;
     }
 
