--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,10 +2,15 @@
     position: relative;
     max-width: 73rem;
     display: flex;
+
     justify-content: space-between;
     padding: 1rem;
     background-color: white;
     z-index: 11;
+}
+
+.nav-list {
+    display: none;
 }
 
 .logo {
@@ -75,9 +80,33 @@
         background-color: white;
         top: 2rem;
         width: 100%;
+        gap: 4.5rem;
         box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.05);
         border-radius: 6px;
         z-index: 10;
+    }
+
+    .nav-list {
+        display: flex;
+        align-items: center;
+        gap: 2.5rem;
+    }
+
+    .nav-list>a {
+        font-weight: 400;
+        font-size: 1rem;
+        line-height: 26px;
+        color: #584F49;
+        cursor: pointer;
+        transition: all 300ms ease-in-out;
+    }
+
+    .nav-list>a:hover{
+        color: #FF9F66;
+    }
+
+    .nav__btn-container>img {
+        display: none;
     }
 }
 
