--- a/src/components/Pricing/Pricing.css
+++ b/src/components/Pricing/Pricing.css
@@ -3,6 +3,11 @@
     background-color: #F5F6F9;
 }
 
+.pracing__wrapper{
+    margin: 0 auto;
+    max-width: 54rem;
+}
+
 .pricing__head-container {
     margin-bottom: 1rem;
     text-align: center;
