--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -23,7 +23,7 @@
 .form__heading>p {
     max-width: 90%;
     font-weight: 400;
-    font-size: 12px;
+    font-size: clamp(0.8rem, 1vw, 1rem);
     line-height: 22px;
     color: #584F49;
     margin-bottom: 1.8rem;
@@ -68,7 +68,7 @@
 
 .checked-box>p {
     font-weight: 400;
-    font-size: 10px;
+    font-size: clamp(0.625rem, 1vw, 0.8rem);
     line-height: 20px;
     color: #584F49;
 }
@@ -79,6 +79,7 @@
 }
 
 .form__form-wraper>button {
+    cursor: pointer;
     width: 35%;
     padding: 0.4rem;
     border: none;
