--- a/src/components/Newsletter/Newsletters.css
+++ b/src/components/Newsletter/Newsletters.css
@@ -20,7 +20,7 @@
 
 .newsletter__wrapper>p {
     font-weight: 400;
-    font-size: 0.8rem;
+    font-size: clamp(0.8rem, 1vw, 1rem);
     line-height: 22px;
     text-align: center;
     color: #D4EEE9;
