--- a/src/components/Pricing/PricingPlanCard.css
+++ b/src/components/Pricing/PricingPlanCard.css
@@ -69,7 +69,7 @@ ul {
     border: 1px solid #F4F5F7;
     border-radius: 4px;
     font-weight: 400;
-    font-size: 0.7rem;
+    font-size: clamp(0.7rem, 1vw, 0.9rem);
     line-height: 22px;
     color: #584F49;
     flex: 1;
