--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -93,16 +93,45 @@
     }
 
     .nav-list>a {
+        position: relative;
         font-weight: 400;
         font-size: 0.9rem;
-        line-height: 26px;
+        line-height: 1rem;
         color: #584F49;
         cursor: pointer;
         transition: all 300ms ease-in-out;
     }
 
+    .nav-list>a:before,
+    .nav-list>a:after {
+        content: "";
+        position: absolute;
+        bottom: -2px;
+        width: 0;
+        height: 2px;
+        background: #FF9F66;
+        transition: width 0.3s ease-in-out;
+    }
+
+    .nav-list>a:before {
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .nav-list>a:after {
+        right: 50%;
+        transform: translateX(50%);
+    }
+
     .nav-list>a:hover{
+        opacity: 0.7;
+        color:#FF9F66;
+    }
+
+    .nav-list>a:hover:before,
+    .nav-list>a:hover:after {
         color: #FF9F66;
+        width: 100%;
     }
 
     .nav__btn-container>img {
