--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,11 +2,40 @@
     position: relative;
     max-width: 73rem;
     display: flex;
-
     justify-content: space-between;
     padding: 1rem;
     background-color: white;
     z-index: 11;
+}
+
+.nav-list-mobile {
+    position: absolute;
+    background-color: white;
+    padding: 1rem;
+    width: 100%;
+    height: 50vh;
+    top: 0;
+    left: 0;
+    display: grid;
+    gap: 2rem;
+    border-radius: 6px;
+    z-index: 11;
+    text-align: center;
+    color: black;
+}
+
+.nav-list-mobile>a {
+    align-self: center;
+    color: black;
+}
+
+.nav-list-mobile>a:hover {
+    color:#FF9F66;
+}
+
+.nav__btn-container>img {
+    position: relative;
+    z-index: 12;
 }
 
 .nav-list {
@@ -32,6 +61,7 @@
 }
 
 .nav__btn-container {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -86,6 +116,10 @@
         z-index: 10;
     }
 
+    .nav-list-mobile {
+        display: none;
+    }
+
     .nav-list {
         display: flex;
         align-items: center;
@@ -123,9 +157,9 @@
         transform: translateX(50%);
     }
 
-    .nav-list>a:hover{
+    .nav-list>a:hover {
         opacity: 0.7;
-        color:#FF9F66;
+        color: #FF9F66;
     }
 
     .nav-list>a:hover:before,
