--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,10 +10,10 @@
 
 .nav-list-mobile {
     position: absolute;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 1rem;
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     top: 0;
     left: 0;
     display: grid;
@@ -24,18 +24,46 @@
     color: black;
 }
 
+.close {
+    display: none;
+}
+
+.hamburger-btn {
+    width: 3rem;
+    z-index: 12;
+}
+
+.hamburger-btn>button {
+    width: 100%;
+    display: grid;
+    gap: 0.3rem;
+    border: none;
+    padding: 0.5rem;
+    background-color: white;
+}
+
+.hamburger-btn>button>span {
+    background-color: #FF9F66;
+    border-radius: 5px;
+    height: 3px;
+    transition: transform 0.3s ease;
+}
+
+.hamburger-btn.open>button>span:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger-btn.open>button>span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-btn.open>button>span:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
 .nav-list-mobile>a {
     align-self: center;
-    color: black;
-}
-
-.nav-list-mobile>a:hover {
-    color:#FF9F66;
-}
-
-.nav__btn-container>img {
-    position: relative;
-    z-index: 12;
+    color: #FF9F66;
 }
 
 .nav-list {
@@ -168,7 +196,7 @@
         width: 100%;
     }
 
-    .nav__btn-container>img {
+    .hamburger-btn {
         display: none;
     }
 }
