--- a/src/components/Form/Input.css
+++ b/src/components/Form/Input.css
@@ -1,4 +1,4 @@
-.input__wraper {
+.input__wrapper {
     padding: 0.5rem;
     border: 1px solid #CFCFCF;
     border-radius: 3.01613px;
@@ -8,13 +8,13 @@
     border: none;
 }
 
-.input__wraper>input {
+.input__wrapper>input {
     border: none;
     outline: none;
     color: #584F49;
 }
 
-.input__wraper>input::placeholder {
+.input__wrapper>input::placeholder {
     color: #584F49;
     font-weight: 400;
     font-size: 10px;
