--- a/src/components/Pricing/Pricing.css
+++ b/src/components/Pricing/Pricing.css
@@ -1,9 +1,9 @@
-.pracing__container {
+.pricing__container {
     padding: 2rem 1.1rem;
     background-color: #F5F6F9;
 }
 
-.pracing__wrapper{
+.pricing__wrapper{
     margin: 0 auto;
     max-width: 54rem;
 }
