--- a/src/components/Pricing/PricingPlanCard.css
+++ b/src/components/Pricing/PricingPlanCard.css
@@ -47,7 +47,7 @@ ul {
 
 }
 
-.pricingPlanCard__acces {
+.pricingPlanCard__access {
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -55,7 +55,7 @@ ul {
 }
 
 
-.pricingPlanCard__acces>p {
+.pricingPlanCard__access>p {
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -99,7 +99,7 @@ ul {
 
 
 @media screen and (min-width: 800px) {
-    .pricingPlanCard__acces {
+    .pricingPlanCard__access {
         height: 75%;
         justify-content: space-between;
     }
