--- a/src/components/Form/Input.css
+++ b/src/components/Form/Input.css
@@ -1,9 +1,32 @@
 .input__wrapper {
+    position: relative;
     padding: 0.5rem;
     border: 1px solid #CFCFCF;
     border-radius: 3.01613px;
+    transition: border 0.3s ease-in-out;
+}
+.error{
+    font-size: 0.5rem;
+    color: red;
+    margin: -0.5rem 0.5rem;
 }
 
+.input__wrapper.input-error{
+    border: 1px solid red;
+}
+
+.input__wrapper.correct{
+    border: 1px solid green;
+}
+
+.input__wrapper.correct> label{
+    transform: translate(-0.2rem, -1rem);
+    color: green;
+}
+.input__wrapper.input-error > label{
+    transform: translate(-0.2rem, -1rem);
+    color: red;
+}
 .border-none{
     border: none;
 }
@@ -14,9 +37,25 @@
     color: #584F49;
 }
 
-.input__wrapper>input::placeholder {
+.input__wrapper > label{
+    position: absolute;
+    /* transform: translate(-0.2rem, -1rem); */
+    font-size: 0.75rem;
     color: #584F49;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 20px;
+    background: white;
+    transition: transform 0.3 ease-in-out;
+    pointer-events: none;
+}
+
+.input__wrapper.animate{
+    border: 1px solid #FF9F66;
+}
+
+.input__wrapper.animate > label{
+    transform: translate(-0.2rem, -1rem);
+    color: #FF9F66;
+}
+
+.input__wrapper.blur > label{
+    transform: translate(-0.2rem, -1rem);
 }
