--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -14,7 +14,15 @@
     color: #1C0A0A;
 }
 
+.testimonials__card-wrapper{
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    transition: transform 1s;
+}
+
 .testimonials__card {
+    flex: 0 0 100%;
     padding: 0.5rem;
     max-width: 46rem;
     box-shadow: 0px 27.4797px 68.6992px -9.15989px rgba(0, 0, 0, 0.04);
