--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -14,16 +14,17 @@
     color: #1C0A0A;
 }
 
-.testimonials__card-wrapper{
-    width: 100%;
+.testimonials__card-wrapper {
     overflow: hidden;
+    width: 100%;
     display: flex;
     transition: transform 1s;
 }
 
 .testimonials__card {
     flex: 0 0 100%;
-    padding: 0.5rem;
+    transition: transform 1s;
+    padding: 1.5rem;
     max-width: 46rem;
     box-shadow: 0px 27.4797px 68.6992px -9.15989px rgba(0, 0, 0, 0.04);
     border-radius: 8px;
@@ -52,13 +53,41 @@
     color: #1C0A0A;
 }
 
+.dots {
+    display: flex;
+    padding: 1rem;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.dot-wrapper {
+    text-align: center;
+    padding: 0.125rem;
+    border: 0.5px solid gray;
+    border-radius: 100%;
+}
+
+.dot {
+    width: 0.65rem;
+    height: 0.65rem;
+    background-color: gray;
+    border-radius: 100%;
+    cursor: pointer;
+    transition: background-color 0.5s;
+}
+
+.dot.active {
+    background-color: #FF9F66;
+}
+
 @media screen and (min-width: 800px) {
     .testimonials__wrapper {
         margin: 0 auto;
         width: 70%;
     }
 
-    .testimonials__card{
-        margin: 1.5rem auto;
+    .testimonials__card {
+        margin: 0.5rem auto;
     }
 }
